--- a/StockManager/Views/TailorChalan/Edit.cshtml
+++ b/StockManager/Views/TailorChalan/Edit.cshtml
@@ -405,6 +405,9 @@
                     ChalanDate: $('#ChalanDate').val(),
                     ChalanNo: $('#ChalanNo').val(),
                     IsGivenToTailor: (('@Model.IsGivenToTailor' == 'True') ? 1 : 0),
+                    tenant_id: @Model.tenant_id,
+                    financial_year: @Model.financial_year,
+                    created_by: @Model.created_by,
                     TailorChalanDetails: list,
                 }
 
