--- a/StockManager/Views/Products/Create.cshtml
+++ b/StockManager/Views/Products/Create.cshtml
@@ -12,6 +12,7 @@
         <h4>Add New Product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
         <div class="form-group">
             @Html.LabelFor(model => model.ProductTypeId, "Product Type", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
