--- a/StockManager/Views/Products/Edit.cshtml
+++ b/StockManager/Views/Products/Edit.cshtml
@@ -13,6 +13,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
 
         <div class="form-group">
             @Html.LabelFor(model => model.ProductTypeId, "Product Type", htmlAttributes: new { @class = "control-label col-md-2" })
