--- a/StockManager/Views/TailorChalan/Create.cshtml
+++ b/StockManager/Views/TailorChalan/Create.cshtml
@@ -11,6 +11,9 @@
         <h4>Tailor Chalan</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(x => x.created_by, new { Value = Session["UserID"] })
+        @Html.HiddenFor(x => x.financial_year, new { Value = Session["FinancialYearID"] })
+        @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
         <div class="container">
             <div class="row">
                 <div id="div1" class="col-md-6 col-xs-12">
