--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                             <span>Tailor Work</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="~/TailorChalan/Index/1">Tailor Work (Given)</a></li>
+                            <li><a href="~/TailorChalanSend/Index">Tailor Work (Given)</a></li>
                             <li><a href="~/TailorChalan/Index/0">Tailor Work (Receive)</a></li>
                         </ul>
                     </li>    
