--- a/StockManager/Views/TailorChalan/Details.cshtml
+++ b/StockManager/Views/TailorChalan/Details.cshtml
@@ -99,5 +99,5 @@
     }
 </table>
 <p>
-    @Html.ActionLink("Close", "Index", "PrinterChalans", new { @class = "btn btn-danger" })
+    @Html.ActionLink("Close", "Index", "TailorChalanSend", new { @class = "btn btn-danger" })
 </p>
