--- a/StockManager/Views/TailorChalanSend/Details.cshtml
+++ b/StockManager/Views/TailorChalanSend/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model StockManager.Models.TailorChalan
+﻿@model StockManager.Models.TailorChalanSend
 
 @{
     ViewBag.Title = "Details";
@@ -28,10 +28,22 @@
         <dd>
             @Html.DisplayFor(model => model.ChalanDate)
         </dd>
+        <dt>
+            Bill Number
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.bill_number)
+        </dd>
+        <dt>
+            Description
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
     </dl>
 </div>
 <p>
-    Printer Chalan Details
+    Chalan Details
 </p>
 <table class="table">
     <tr>
@@ -41,14 +53,12 @@
         <th>
             Quantity
         </th>
-        <th>
-            Labor Cost
-        </th>
+        
     </tr>
     @{
-        if (Model != null && Model.TailorChalanDetails != null)
+        if (Model != null && Model.TailorChalanSendDetails != null)
         {
-            foreach (var item in Model.TailorChalanDetails)
+            foreach (var item in Model.TailorChalanSendDetails)
             {
 
                 <tr>
@@ -58,42 +68,9 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Quantity)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LaborCost)
-                    </td>
+                    
                 </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <table class="table">
-                            <tr>
-                                <th colspan="2"> Material Details</th>
-                            </tr>
-                            <tr>
-                                <th>
-                                    Product
-                                </th>
-                                <th>
-                                    Quantity
-                                </th>
-                            </tr>
-                            @if (item.TailorMaterialDetails != null)
-                            {
-                                foreach (var material in item.TailorMaterialDetails)
-                                {
-                                    <tr>
-                                        <th>
-                                           @Html.DisplayFor(p => material.Product.ProductName) 
-                                        </th>
-                                        <th>
-                                           @Html.DisplayFor(p => material.Quantity)
-                                        </th>
-                                    </tr>
-                                }
-                            }
-                        </table>
-                    </td>
-                </tr>
+                
             }
         }
     }
