Login error fix and remember_me fix

--- a/StockManager/Views/Users/Login.cshtml
+++ b/StockManager/Views/Users/Login.cshtml
@@ -46,6 +46,12 @@
                                     @Session["SUCCESS"]
                                 </div>
                             }
+                            if ( ViewBag.ErrorMsg != null )
+                            {
+                                <div class="alert alert-danger">
+                                    @ViewBag.ErrorMsg
+                                </div>
+                            }
                         }
                     </div>
 
