--- a/StockManager/Views/Users/Edit.cshtml
+++ b/StockManager/Views/Users/Edit.cshtml
@@ -31,6 +31,7 @@
                 @Html.HiddenFor(model => model.UserId)
                 @Html.HiddenFor(model => model.Password)
                 @Html.HiddenFor(model => model.Email)
+                @Html.HiddenFor(model => model.TenantId)
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -57,14 +58,6 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.TenantId, "TenantId", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("TenantId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.TenantId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Save" class="btn btn-primary" />
                     </div>
@@ -72,10 +65,10 @@
             </div>
         }
 
-</div>
     </div>
+</div>
 
 
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
