--- a/StockManager/Views/Shared/dashboard/sidebar.cshtml
+++ b/StockManager/Views/Shared/dashboard/sidebar.cshtml
@@ -23,6 +23,12 @@
                 </a>
             </li>
             <li class="nav-item start">
+                <a href="@Url.Action("Index", "Customers")" class="nav-link nav-toggle">
+                    <i class="icon-home"></i>
+                    <span class="title">Customer</span>
+                </a>
+            </li>
+            <li class="nav-item start">
                 <a href="@Url.Action("Index", "PurchaseOrders")" class="nav-link nav-toggle">
                     <i class="icon-home"></i>
                     <span class="title">Purchase Orders</span>
