--- a/StockManager/Views/Shared/dashboard/sidebar.cshtml
+++ b/StockManager/Views/Shared/dashboard/sidebar.cshtml
@@ -39,12 +39,36 @@
                     <i class="icon-home"></i>
                     <span class="title">Printer Challan</span>
                 </a>
+                <ul class="sub-menu">
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 1</span>
+                        </a>
+                    </li>   
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 2</span>
+                        </a>
+                    </li>                    
+                </ul>
             </li>
             <li class="nav-item start">
                 <a href="@Url.Action("Index", "TailorChalan")" class="nav-link nav-toggle">
                     <i class="icon-home"></i>
                     <span class="title">Tailor Challan</span>
                 </a>
+                <ul class="sub-menu">
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 1</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 2</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li class="nav-item start">
                 <a href="@Url.Action("Index", "Invoices")" class="nav-link nav-toggle">
@@ -63,6 +87,18 @@
                     <i class="icon-home"></i>
                     <span class="title">Reports</span>
                 </a>
+                <ul class="sub-menu">
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 1</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  ">
+                        <a href="#" class="nav-link ">
+                            <span class="title">Example 2</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
         </ul>
         <!-- END SIDEBAR MENU -->
